src/objects/Alsur_Farmer_Delivery_Basket__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coophsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASOAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aproborca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Si se puede</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ofimovil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gran Tescual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmer_Product_Delivery__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Farmer Product Delivery</label>
        <referenceTo>Farmer_Product_Delivery__c</referenceTo>
        <relationshipLabel>Alsur Farmer Delivery Baskets</relationshipLabel>
        <relationshipName>Alsur_Farmer_Delivery_Baskets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Alsur Farmer Delivery Basket</label>
    <nameField>
        <displayFormat>BN-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Alsur Farmer Delivery Basket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alsur Farmer Delivery Baskets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>